--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  agorq
 
+show_excerpts: true
+paginate: true
+
 # Build settings
 markdown: kramdown
 plugins:
